--- a/src/app/ideation/components/edit-idea/edit-idea.component.scss
+++ b/src/app/ideation/components/edit-idea/edit-idea.component.scss
@@ -1,60 +1,5 @@
 @use "mixins";
 
-#create_idea_footer_menu {
-  display: flex;
-  justify-content: space-between;
-  background-color: var(--color-surfaces);
-  border-radius: 16px 16px 0 0;
-  width: inherit;
-  z-index: 9999;
-  padding: 16px;
-  position: fixed;
-  bottom: 0;
-  align-items: center;
-  max-width: 872px;
-  width: calc(100% - 567px);
-  box-shadow: 0px -8px 20px 0px rgba(220, 231, 240, 0.10), 0px -12px 16px 0px rgba(50, 85, 112, 0.04);
-
-  @include mixins.tablet {
-    max-width: 100%;
-    display: none;
-  }
-
-  @include mixins.mobile {
-    overflow-y: scroll;
-  }
-
-  .footer_title {
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 24px; /* 150% */
-  }
-}
-
-#create_idea_tablet_btn {
-  display: none;
-  @include mixins.tablet {
-    position: fixed;
-    display: flex;
-    justify-content: flex-end;
-    bottom: 64px;
-    right: 8px;
-
-    button {
-      svg {
-        position: absolute;
-      }
-    }
-  }
-
-  @include mixins.mobile {
-    margin-top: -30px;
-    margin-bottom: 0;
-    margin-right: 0;
-  }
-}
-
 #create_idea_footer {
   display: flex;
   flex-direction: column;
@@ -81,7 +26,9 @@
     max-width: 100%;
     width: 100%;
   }
-
+  @include mixins.mobile {
+    overflow: auto;
+  }
   #buttons_row {
     display: flex;
     width: 100%;
@@ -92,7 +39,7 @@
       .close_button {
         display: none;
       }
-      .btn_medium_submit {
+      .btn_medium_submit_ghost, .btn_medium_submit {
         width: 100%;
       }
     }
@@ -106,6 +53,7 @@
 
       @include mixins.mobile {
         width: 100%;
+        flex-direction: column;
       }
       #chars_left {
         @include mixins.mobile {
@@ -185,18 +133,16 @@
       align-items: center;
       gap: 4px;
 
+      @include mixins.mobile {
+        flex-direction: column;
+      }
       img {
-        height: 40px;
+        width: 80px;
         transition: all 0.3s ease-in;
         -webkit-transition: all 0.3s ease-in;
         -moz-transition: all 0.3s ease-in;
         -o-transition: all 0.3s ease-in;
         -ms-transition: all 0.3s ease-in;
-
-        @include mixins.mobile {
-          width: 100%;
-          height: auto;
-        }
       }
     }
   }
