--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1821,7 +1821,7 @@ tour-item-template {
 
   .editor-statusbar {
     position: absolute;
-    top: 0;
+    top: 48px;
     right: 0;
     font-size: 12px;
     line-height: 16px;
