--- a/src/app/directives/components/markdown-link-dialog/markdown-link-dialog.component.html
+++ b/src/app/directives/components/markdown-link-dialog/markdown-link-dialog.component.html
@@ -52,6 +52,9 @@
             </label>
           </cos-input>
         </div>
+
+        <div class="line_separator"></div>
+        <div [innerHTML]="'MODALS.MARKDOWN_ADD_LINK_DESCRIPTION' | translate"></div>
       </form>
     </div>
     <div class="dialog_footer with_buttons">
