--- a/src/app/topic/components/topic-form/topic-form.component.scss
+++ b/src/app/topic/components/topic-form/topic-form.component.scss
@@ -350,8 +350,14 @@
 }
 
 #topic_members_list_wrap {
+  align-items: flex-start;
+  text-align:left;
+  .row_header {
+    background-color: var(--color-surfaces);
+  }
   .row_list,
   .row_header {
+    border-radius: 8px;
     .row_cell {
       &:first-child {
         min-width: 45%;
@@ -364,6 +370,14 @@
         min-width: 15%;
         text-align: right;
         justify-content: flex-end;
+      }
+
+      .tooltip {
+        top: -11px;
+        position: relative;
+        @include mixins.mobile {
+          top: -1px;
+        }
       }
     }
   }
