--- a/src/app/voting/components/vote-create/vote-create.component.html
+++ b/src/app/voting/components/vote-create/vote-create.component.html
@@ -735,15 +735,27 @@
                             {{group.name}}
                           </div>
                         </ng-container>
-                        <div class="disabled" *ngIf="groups.length <= topicGroups.length" translate="VIEWS.VOTE_CREATE.SETTINGS_GROUP_SELECT_ALL_ADDED"></div>
+                        <div class="disabled" *ngIf="groups.length <= topicGroups.length"
+                          translate="VIEWS.VOTE_CREATE.SETTINGS_GROUP_SELECT_ALL_ADDED"></div>
                       </div>
                     </div>
                     <ng-container *ngIf="topicGroups$ | async"></ng-container>
-                    <div *ngIf="topicGroups.length" class="small_heading" translate="VIEWS.VOTE_CREATE.SETTINGS_HEADING_GROUP_LIST"></div>
+                    <div *ngIf="topicGroups.length" class="small_heading"
+                      translate="VIEWS.VOTE_CREATE.SETTINGS_HEADING_GROUP_LIST"></div>
                     <div id="topic_members_list_wrap" class="table_section">
-                      <div class="row_header" *ngIf="topicGroups.length">
+                      <div class="row_header mobile_hidden" *ngIf="topicGroups.length">
                         <div class="row_cell" translate="VIEWS.VOTE_CREATE.MEMBER_GROUP_HEADING_TITLE"></div>
-                        <div class="row_cell" translate="VIEWS.VOTE_CREATE.MEMBER_GROUP_HEADING_GROUP_PERMISSIONS">
+                        <div class="row_cell with_tooltip"
+                          translate="VIEWS.VOTE_CREATE.MEMBER_GROUP_HEADING_GROUP_PERMISSIONS">
+                          <div class="tooltip" tooltip>
+                            <div class="content_title" translate="VIEWS.TOPIC_CREATE.TOOLTIP_GROUP_PERMISSIONS_TITLE">
+                            </div>
+                            <div class="content_description"
+                              translate="VIEWS.TOPIC_CREATE.TOOLTIP_GROUP_PERMISSIONS_CONTENT"></div>
+                            <div class="content_description"
+                              [innerHTML]="'VIEWS.TOPIC_CREATE.TOOLTIP_GROUP_PERMISSIONS_CONTENT_PERMISSIONS_DESC' | translate">
+                            </div>
+                          </div>
                         </div>
                         <div class="row_cell mobile_hide" translate="VIEWS.VOTE_CREATE.MEMBER_GROUP_HEADING_ACTIONS">
                         </div>
@@ -761,6 +773,16 @@
                             <div class="row_cell">
                               <div class="cell_title"
                                 translate="VIEWS.VOTE_CREATE.MEMBER_GROUP_HEADING_GROUP_PERMISSIONS">
+                                <div class="tooltip" tooltip>
+                                  <div class="content_title"
+                                    translate="VIEWS.TOPIC_CREATE.TOOLTIP_GROUP_PERMISSIONS_TITLE">
+                                  </div>
+                                  <div class="content_description"
+                                    translate="VIEWS.TOPIC_CREATE.TOOLTIP_GROUP_PERMISSIONS_CONTENT"></div>
+                                  <div class="content_description"
+                                    [innerHTML]="'VIEWS.TOPIC_CREATE.TOOLTIP_GROUP_PERMISSIONS_CONTENT_PERMISSIONS_DESC' | translate">
+                                  </div>
+                                </div>
                               </div>
                               <div class="dropdown" [cosDropdown]>
                                 <div class="selection">
