--- a/src/app/topic/components/topic-form/topic-form.component.html
+++ b/src/app/topic/components/topic-form/topic-form.component.html
@@ -655,9 +655,19 @@
                       for.</div>
                   </!--div-->
                 </div>
-                <div class="mobile_hidden" translate="VIEWS.TOPIC_CREATE.SETTINGS_ADD_TO_GROUP_DESC"></div>
+                <div class="mobile_hidden" translate="VIEWS.TOPIC_CREATE.SETTINGS_ADD_TO_GROUP_DESC">
+                  <div class="tooltip" tooltip>
+                    <div class="content_title" translate="VIEWS.TOPIC_CREATE.TOOLTIP_ADD_TO_GROUP"></div>
+                    <div class="content_description" translate="VIEWS.TOPIC_CREATE.TOOLTIP_ADD_TO_GROUP_CONTENT"></div>
+                  </div>
+                </div>
               </div>
-              <div class="mobile_show" translate="VIEWS.TOPIC_CREATE.SETTINGS_ADD_TO_GROUP_DESC"></div>
+              <div class="mobile_show" translate="VIEWS.TOPIC_CREATE.SETTINGS_ADD_TO_GROUP_DESC">
+                <div class="tooltip" tooltip>
+                  <div class="content_title" translate="VIEWS.TOPIC_CREATE.TOOLTIP_ADD_TO_GROUP"></div>
+                  <div class="content_description" translate="VIEWS.TOPIC_CREATE.TOOLTIP_ADD_TO_GROUP_CONTENT"></div>
+                </div>
+              </div>
               <ng-container *ngIf="groups$ | async as groups;">
                 <ng-container *ngIf="!groups.length">
                   <div class="no_engagements">
@@ -765,7 +775,7 @@
                                   translate="VIEWS.TOPIC_CREATE.TOOLTIP_GROUP_PERMISSIONS_TITLE"></div>
                                 <div class="content_description"
                                   translate="VIEWS.TOPIC_CREATE.TOOLTIP_GROUP_PERMISSIONS_CONTENT"></div>
-                                  <div class="content_description"
+                                <div class="content_description"
                                   [innerHTML]="'VIEWS.TOPIC_CREATE.TOOLTIP_GROUP_PERMISSIONS_CONTENT_PERMISSIONS_DESC' | translate">
                                 </div>
                               </div>
