--- a/src/app/public-topics/components/topicbox/topicbox.component.scss
+++ b/src/app/public-topics/components/topicbox/topicbox.component.scss
@@ -259,3 +259,19 @@
     }
   }
 }
+.remove_wrap {
+  position: absolute;
+  z-index: 9;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255,255,255, 0.5);
+
+  button {
+    z-index: 99;
+    gap: 8px;
+  }
+}
+
