--- a/src/app/topic/components/topic-form/topic-form.component.scss
+++ b/src/app/topic/components/topic-form/topic-form.component.scss
@@ -252,7 +252,6 @@
     font-weight: 600;
   }
 }
-
 .topic_members_list_wrap {
   display: flex;
   flex-direction: column;
@@ -276,6 +275,42 @@
     }
   }
 }
+
+#topic_members_list_wrap {
+  .small_heading {
+    align-self: flex-start;
+  }
+  .row_header {
+    background-color: var(--color-surfaces);
+  }
+  .row_list,
+  .row_header {
+    border-radius: 8px;
+    .row_cell {
+      &:first-child {
+        min-width: 45%;
+      }
+      &:nth-child(2) {
+        min-width: 30%;
+        justify-content: flex-start;
+      }
+      &:nth-child(3) {
+        min-width: 15%;
+        text-align: right;
+        justify-content: flex-end;
+      }
+
+      .tooltip {
+        top: -11px;
+        position: relative;
+        @include mixins.mobile {
+          top: -1px;
+        }
+      }
+    }
+  }
+}
+
 #add_section_wrap {
   display: flex;
   background-color: var(--color-surfaces);
