--- a/src/app/topic/components/topic-form/topic-form.component.html
+++ b/src/app/topic/components/topic-form/topic-form.component.html
@@ -363,13 +363,11 @@
             <div class="block_title_wrap" (click)="block.description = true;">
               <div>
                 <div class="block_title" translate="VIEWS.TOPIC_CREATE.TITLE_DESCRIPTION">
-                  <!--div class="tooltip" tooltip>
-                    <div class="content_title">Help on its way</div>
-                    <div class="content_description">Help text coming soon! Please tell us what help you were looking
-                      for.</div>
-                  </!div-->
+                  <div class="tooltip" tooltip>
+                    <div class="content_title" translate="VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_TEXT_TITLE"></div>
+                    <div class="content_description" translate="VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_TEXT_CONTENT"></div>
+                  </div>
                 </div>
-                <!--div *ngIf="!block.description" translate="VIEWS.TOPIC_CREATE.TITLE_DESCRIPTION_TEXT"></!--div-->
               </div>
               <div class="counter_wrap">
                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
