--- a/src/app/topic/components/topic-form/topic-form.component.html
+++ b/src/app/topic/components/topic-form/topic-form.component.html
@@ -569,11 +569,10 @@
               </div>
               <div class="header_wrap">
                 <div class="small_heading" translate="VIEWS.TOPIC_CREATE.SETTINGS_HEADING_LOCALITY">
-                  <!--div class="tooltip" tooltip>
-                    <div class="content_title">Help on its way</div>
-                    <div class="content_description">Help text coming soon! Please tell us what help you were looking
-                      for.</div>
-                  </!--div-->
+                  <div class="tooltip" tooltip>
+                    <div class="content_title" translate="VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_LOCALITY_TITLE"></div>
+                    <div class="content_description" translate="VIEWS.TOPIC_CREATE.TOOLTIP_TOPIC_LOCALITY_CONTENT"></div>
+                  </div>
                 </div>
                 <div class="mobile_hidden" translate="VIEWS.TOPIC_CREATE.SETTINGS_LOCALITY_SELECT_DESC"></div>
               </div>
