--- a/src/app/topic/components/topic-vote-delegate/topic-vote-delegate.component.html
+++ b/src/app/topic/components/topic-vote-delegate/topic-vote-delegate.component.html
@@ -33,6 +33,7 @@
 
     <div class="dialog_content">
       <div class="dialog_info" translate="MODALS.TOPIC_VOTE_DELEGATE_LBL_SEARCH_MEMBERS"></div>
+      <div class="dialog_info bold" translate="MODALS.TOPIC_VOTE_DELEGATE_LBL_INFO"></div>
       <div class="dialog_info">
         <div id="search_wrap">
           <typeahead id="input_area" [term]="searchStringUser" (search)="search($event)" (select)="addUser($event)"
