--- a/src/app/group/components/group-invitation/group-invitation.component.html
+++ b/src/app/group/components/group-invitation/group-invitation.component.html
@@ -83,6 +83,9 @@
           <div class="row">
             <b [innerHTML]="'MODALS.GROUP_INVITE_VIEW_BTN_LOGIN_AS' | translate:{email: invite.user.email}"></b>
           </div>
+          <div class="row">
+            <span translate="MODALS.GROUP_INVITE_VIEW_EMAIL_INFO"></span>
+          </div>
         </div>
       </div>
     </div>
