--- a/src/app/group/components/group-invite/group-invite.component.scss
+++ b/src/app/group/components/group-invite/group-invite.component.scss
@@ -151,3 +151,12 @@
   flex-direction: column;
   gap: 8px;
 }
+
+#group_members_list_wrap {
+
+  .tooltip {
+    position: absolute;
+    top: 10px;
+    right: 0;
+  }
+}
