--- a/src/app/ideation/components/add-idea/add-idea.component.scss
+++ b/src/app/ideation/components/add-idea/add-idea.component.scss
@@ -72,6 +72,18 @@
   gap: 16px;
   box-shadow: 0px -8px 20px 0px rgba(220, 231, 240, 0.1),
     0px -12px 16px 0px rgba(50, 85, 112, 0.04);
+  overflow: auto;
+
+  &::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+    background-color: var(--color-scrollbar);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--color-scrollbar-thumb);
+    border-radius: 8px;
+  }
 
   @include mixins.tablet {
     position: fixed;
@@ -93,7 +105,8 @@
       .close_button {
         display: none;
       }
-      .btn_medium_submit, .btn_medium_submit_ghost {
+      .btn_medium_submit,
+      .btn_medium_submit_ghost {
         width: 100%;
       }
     }
