--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.html
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.html
@@ -74,9 +74,9 @@
               <div class="option" (click)="closeIdeation()">
                 <div class="icon_wrap">
                   <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="8" cy="8" r="5.5" fill="#2C3B47" stroke="#2C3B47" />
-                    <path d="M11 5L5 11" stroke="white" stroke-width="1.4" />
-                    <path d="M5 5L11 11" stroke="white" stroke-width="1.4" />
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M4 2C2.89543 2 2 2.89543 2 4V12C2 13.1046 2.89543 14 4 14H12C13.1046 14 14 13.1046 14 12V4C14 2.89543 13.1046 2 12 2H4ZM12.06 4.92L10.94 4.08L6.97109 9.37188L5.03776 7.05187L3.96225 7.94813L7.02891 11.6281L12.06 4.92Z"
+                      fill="#2C3B47" />
                   </svg>
                 </div>
                 <span translate="COMPONENTS.TOPIC_IDEATION.OPT_CLOSE_IDEATION"></span>
