--- a/src/app/topic/components/topic-share/topic-share.component.html
+++ b/src/app/topic/components/topic-share/topic-share.component.html
@@ -18,7 +18,10 @@
       </div>
     </div>
     <div class="level_select_wrap">
-      <span class="bold" translate="COMPONENTS.TOPIC_SHARE.LBL_ACCESS_LEVEL"></span>
+      <span class="bold" translate="COMPONENTS.TOPIC_SHARE.LBL_ACCESS_LEVEL"><div class="tooltip" tooltip>
+        <div class="content_title" translate="COMPONENTS.TOPIC_INVITE_EDITORS.TOOLTIP_TOPIC_ROLES_HEADING"></div>
+        <div class="content_description" [innerHTML]="'COMPONENTS.TOPIC_INVITE_EDITORS.TOOLTIP_TOPIC_ROLES_DESCRIPTION' | translate"></div>
+      </div></span>
       <div class="dropdown" [cosDropdown] [ngClass]="{'disabled': !canUpdate()}">
         <div class="selection">
           <div class="selected_item">{{'TXT_TOPIC_LEVELS_' + (join.level) |
